[package]
name = "remux"
version = "0.3.1"
edition = "2021"
authors = [ "Valerie Wolfe <sleeplessval@gmail.com>" ]
description = "A friendly command shortener for tmux"
homepage = "https://git.vwolfe.io/valerie/remux"
repository = "https://git.vwolfe.io/valerie/remux"
license = "MIT"

[[bin]]
name = "remux"
path = "src/main.rs"

[dependencies]
pico-args = { version = "0.5.0", features = [ "combined-flags", "eq-separator" ] }
termion = "2.0.1"
tmux_interface = "0.3.2"

[profile.release]
opt-level = 's'
lto = true
debug = false
codegen-units = 1
panic = "abort"
strip = "symbols"

